--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,9 +7,15 @@
     android:padding="24dp">
 
     <TextView
-        android:text="회원가입 페이지"
-        android:textSize="20sp"
+        android:text="google login"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/GoogleSignButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
