--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,45 +2,59 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <!-- 상단바 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/settingtop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/settingmenu"
-        android:layout_width="414dp"
+        android:layout_width="0dp"
         android:layout_height="74dp"
-        android:background="#FFFFFF">
+        android:background="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:id="@+id/settingtitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="setting화면"
+            android:layout_marginStart="20dp"
+            android:text="    setting 화면"
             android:textColor="#000000"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
-            app:layout_constraintVertical_bias="0.7"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.7" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
+    <!-- 로그아웃 버튼 -->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/setting_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="로그아웃"
+        style="@style/Widget.Material3.Button"
+        app:layout_constraintTop_toBottomOf="@id/settingtop"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
+
+    <!-- 메뉴 영역 -->
     <LinearLayout
         android:id="@+id/settingmenu"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:background="#EFEFEF"
-        app:layout_constraintTop_toBottomOf="@id/settingtop"
+        app:layout_constraintTop_toBottomOf="@id/setting_logout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
